# chia-gaming

./: .build-chialisp.cache  .dockerignore  .gitignore  ARCHITECTURE.md  AUDIT_CODE_HEALTH.md  BUILDS.md  CLVM_DOS.md  CONNECTIVITY.md  CORRECTNESS_AUDIT.md  Cargo.toml  DEBUGGING_GUIDE.md  DEPLOYING.md  DEVELOPMENT.md  DEV_SETUP.md  Dockerfile  Dockerfile.rust  Dockerfile.test  Dockerfile.web  EXTRACTED_ONCHAIN_METHODS.md  FLWgen.py  FRONTEND_ARCHITECTURE.md  GAME_FORMAT.md  GAME_LIFECYCLE.md  HANDLER_GUIDE.md  INTERNALS.md  LICENSE.MD  ON_CHAIN.md  OVERVIEW.md  README.md  SIMULATOR_TESTING.md  UX_ATOMIC_UPDATE_AUDIT.md  UX_NOTIFICATIONS.md  all-in-list.clinc  append.clinc  assert.clinc  build-all.sh  build-and-run.ps1  build-and-run.sh  build-docker-images.sh  build.rs  (+105 more)
.cursor/rules/: debugging-delegation.mdc  debugging.mdc  git-commits.mdc  read-project-docs.mdc  use-git-for-file-ops.mdc
.githooks/: README.md  pre-commit
.github/workflows/: build-deploy-dev.yml  build-m1-wheel.yml  build-macos.yml  build-test.yml  build-ubuntu-20.04.yml  build-windows.yml  docker-frontend.yml  docker.yaml  frontend.yml  m1-test.yml  publish-docker-images.yml  publish-npm-package.yml.disabled  wasm-test.yml
backend/: .gitignore  cmdline-tsconfig.json  package.json  tsconfig.json
backend/scripts/: chia-build.sh  clone-or-update.sh  clspc.sh  rust-build.sh
backend/test-content/: run_handcalc.clsp  run_onehandcalc.clsp  t1.clsp  test.clinc
bencodex/: Cargo.toml
bencodex/src/: de.rs  error.rs  lib.rs  ser.rs  string_key_map.rs  tests.rs
chia-gaming-agent/tests/: config_and_full_node.rs  rpc_edge_cases.rs
chialisp-dev/: build.rs  dev.toml
clsp/: NOTE  calpoker_generate.clinc  calpoker_include.clsp  calpoker_include_calpoker_factory.hex  calpoker_include_calpoker_factory_hash.hex  calpoker_include_calpoker_template.hex  calpoker_include_calpoker_template_hash.hex  channel_handler.clinc  flatten.clinc  handcalc.clinc  handler_api.md  handler_api.txt  krunk_generate.clinc  krunk_include.clsp  prepend_count.clinc  referee_maker.clinc  smoke_test_deep_compare.clsp  smoke_test_permutations.clsp  smoke_test_sort.clsp  space_poker.clinc  spacepoker_include.clsp  test_handcalc.clsp  utils.clinc
clsp/krunk/: dictionary.clinc  dictutils.clinc  krunk_generate.clinc  krunk_include.clsp  krunk_include_krunk_factory.hex  krunk_include_krunk_factory_hash.hex
clsp/onchain/: game_codes.clinc  referee.clsp  referee.hex
clsp/std/: all_in_list.clinc  append.clinc  assert.clinc  atomsort.clinc  busy.clinc  condition_codes.clinc  (+29 more)
doc/: notes.txt  serialization.md
docs/: gaming-client-design.md  handshake.md  notes.txt  sbc-paper-2025.tex
front-end/: .gitignore  README.md  components.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rebuild-fe.sh  test.sh  tsconfig.json
hub/: pnpm-lock.yaml  pnpm-workspace.yaml
lobby/: pnpm-lock.yaml  pnpm-workspace.yaml
onchain/: game_codes.clinc  referee.clsp  referee.hex  structured-referee.clsp
player-electron/: .gitignore  electron-builder.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
pytests/: c_args.clvm  calpoker.py  compute_hashes.py  find_test_hands.py  load_clvm.py  load_clvm_hex.py  seed.json  seed.py  seed_192.json  seed_511.json  test_arrange_cards.py  test_handlers.py  test_ref.py  test_validation.py  test_validation_pass.py  util.py  validator.py  validator_output.py
python/: README.md  pyproject.toml
python/chia_gaming/clvm_types/: load_clvm_hex.py  program.py  tree_hash.py
python/chia_gaming/util/: hash.py  sized_bytes.py
python/chia_gaming_tests/clvm_types/: load_clvm_hex.py  program.py  tree_hash.py
python/chia_gaming_tests/util/: hash.py  sized_bytes.py
python/krunk/: krunk_words.csv
python/tests/: calpoker.py  compute_hashes.py  find_test_hands.py  load_clvm_hex.py  run-python-tests.sh  seed.py  test_arrange_cards.py  test_calpoker_handlers.py  test_calpoker_validation.py  util.py  validator.py  validator_hashes.py  validator_output.py
python/tests/clvm_types/: tree_hash.py
resources/: GALLERY.md  calpoker_include_calpoker_template.hex  debug_game_handler.clsp  debug_game_handler.hex  deep_compare.clsp  extract-from-image.sh  get_chia_gaming_version.py  local-server.js  main.diff  state_channel.clsp  static-server.js  test_handcalc_micro.clsp  test_handcalc_micro.hex  test_map_enumerate.hex  test_mergein.clsp  test_mergein.hex  unroll_meta_puzzle.hex  unroll_puzzle.clsp.rej  unroll_puzzle_state_channel_unrolling.hex  unroll_puzzle_state_channel_unrolling_hash.hex
src/: calpoker.rs  game_session.rs  games.rs  lib.rs  log.rs  manifest_guards.rs  outside.rs  peer_container.rs  potato_handler.rs  protocol_pretty.rs  referee.rs  shutdown.rs  simulator.rs  transaction_manager.rs  utils.rs
src/tests/crate/: Cargo.toml  test.rs
std/: and.clinc  atomsort.clinc  curry.clinc  echo.clinc  len.clinc  li.clinc  list_compare.clinc  map.clinc  match.clinc  permutations.clinc  relops.clinc  shatree.clinc  slice.clinc  truncate.clinc
tests/: testd.py
tla_plus/: potato_handler.tla
tools/: build-all.sh  build-and-run.sh  build-chialisp.sh  build-deploy.sh  build-docker-images.sh  build-electron.sh  build-static-bundle.sh  build_chialisp.py  check-build-deps.sh  clean-all.sh  clean-js-cruft.sh  compile-krunk-only.sh  conftest.py  docker-js-tests.sh  docker-sim-tests.sh  docker-wasm-tests.sh  e2e-docker-test.sh  local-wasm-tests.sh  release-tests-unconditional.patch  repro_referee_slash.py  run-all-tests.sh  run-clsp-tests.sh  run-docker-demo.sh  test-build-chialisp.sh  test-deploy-archives.sh  test_build_chialisp.py  verify-deploy-archives.mjs  verify-stage.mjs
wallet_spend/: README.md  demo_wallet_interface.py  pyproject.toml
wasm/: Cargo.toml  LICENSE.MD  README.md
wasm/chia-pos2-stub/: Cargo.toml
wasm/chia-pos2-stub/src/: lib.rs
wasm/src/: mod.rs
wasm/tests/: package.json  tsconfig.json  tstestconfig.json
wasm/tests/src/lib/tests/: common.js  common.ts  create_game_cradle.test.ts  index.test.ts  sha256bytes.test.ts
wc-stub/: package.json  pnpm-lock.yaml  tsconfig.eslint.json  tsconfig.json
(+940 files in other folders)
