[package]
name = "chia_gaming"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "A series of protocols that enable state-channels and gaming for the Chia blockchain."
authors = [
    "Art Yerkes <art.yerkes@gmail.com>",
    "Adam Kelly <adam@chia.net>",
    "Matt Howard <matt@chia.net>",
]
homepage = "https://github.com/Chia-Network/chia-gaming/"
repository = "https://github.com/Chia-Network/chia-gaming/"

[features]
sim-tests = []
sim-server = ["sim-tests", "dep:tiny_http", "dep:tungstenite"]
used_linker = []

[dependencies]
bson = "2.13.0"
chia-bls = "0.35.2"
chia-puzzles = "0.20.2"
clvm-traits = "0.35.0"
clvm-utils = "0.35.0"
clvmr = { version = "=0.16.2", features = ["pre-eval"] }
hex = "0.4.3"
lazy_static = "1.4.0"
num-bigint = "0.4.4"
num-traits = "0.2.15"
rand = "0.8.5"
rand_chacha = "0.3.1"
tiny_http = { version = "0.12", optional = true }
tungstenite = { version = "0.24", optional = true }
serde = { version = "1.0.228", features = ["rc"] }
serde_json = "1.0.145"
serde_json_any_key = "2.0.0"
sha2 = "0.10.9"
typetag = "0.2.21"

[dev-dependencies]
bls12_381 = { version = "=0.8.0", features = ["experimental"] }
[build-dependencies]
chialisp = { git = "https://github.com/Chia-Network/chialisp.git", rev = "727a1123d17ad157ab15bb8a7076d341ec24166b" }
clvmr = { version = "=0.17.5" }
toml = "0.8.14"

[[bin]]
name = "chia-gaming-sim"
path = "src/bin/simulator.rs"
required-features = ["sim-server"]

[lib]
name = "chia_gaming"
crate-type = ["rlib"]
