[package]
name = "chia_gaming"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "A series of protocols that enable state-channels and gaming for the Chia blockchain."
authors = [
    "Art Yerkes <art.yerkes@gmail.com>",
    "Adam Kelly <adam@chia.net>",
    "Matt Howard <matt@chia.net>",
]
homepage = "https://github.com/Chia-Network/chia-gaming/"
repository = "https://github.com/Chia-Network/chia-gaming/"

[features]
sim-tests = []
sim-server = ["sim-tests", "dep:tiny_http", "dep:tungstenite", "dep:socket2"]
used_linker = []

[dependencies]
bson = "=2.14.0"
chia-bls = "=0.38.2"
chia-consensus = "=0.38.2"
chia-protocol = "=0.38.2"
chia-puzzles = "=0.20.2"
clvm-traits = "=0.38.2"
clvm-utils = "=0.38.2"
clvmr = { version = "=0.17.5", features = ["pre-eval"] }
hex = "=0.4.3"
lazy_static = "=1.5.0"
num-bigint = "=0.4.6"
num-traits = "=0.2.19"
rand = "=0.9.3"
rand_chacha = "=0.9.0"
socket2 = { version = "=0.6.3", optional = true }
tiny_http = { version = "=0.12", optional = true }
tungstenite = { version = "=0.29", optional = true }
serde = { version = "=1.0.228", features = ["rc"] }
serde_json = "=1.0.145"
serde_json_any_key = "=2.0.0"
sha2 = "=0.10.9"
typetag = "=0.2.21"

[build-dependencies]
chialisp = { git = "https://github.com/Chia-Network/chialisp.git", rev = "6eb5962181f176affc5d8bd84ee25de04fefa4b3" }
clvmr = { version = "=0.17.5" }
toml = "=0.8.23"

[[bin]]
name = "chia-gaming-sim"
path = "src/bin/simulator.rs"
required-features = ["sim-server"]

[lib]
name = "chia_gaming"
crate-type = ["rlib"]
