[build-system]
requires = ["maturin>=1.3.2"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
features = ["sim-tests"]
python-source = "python"

[project]
name = "chia_gaming"
dynamic = ["version"]

[tool.poetry.dependencies]
python = "^3.9"
chia-blockchain = "^2.5.4"

# - Reenable these when we switch over from clvm_tools.
# [project.scripts]
# brun = "chialisp.cmds:brun"
# run = "chialisp.cmds:run"
# opc = "chialisp.cmds:opc"
# opd = "chialisp.cmds:opd"
# cldb = "chialisp.cmds:cldb"
