[project]
name = "wallet-spend"
requires-python = "^3.11"

[tool.poetry]
name = "wallet-spend"
version = "0.1.0"
description = ""
authors = ["arty <art.yerkes@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
chia-blockchain = "2.5.4"
flask_cors = "^6.0.1"
flask = "^3.1.1"

[tool.poetry.extras]
flask = ["async"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

