[package]
name = "chia_gaming_wasm"
version = "0.1.0"
edition = "2018"
authors = ["Art Yerkes <art.yerkes@gmail.com>"]
description = "tools for working with chialisp language; compiler, repl, python and wasm bindings"
homepage = "https://chialisp.com/"
readme = "README.md"
repository = "https://github.com/Chia-Network/chialisp"
license = "MIT"
keywords = ["chia", "chialisp", "clvm"]
categories = ["command-line-utilities"]

[lib]
name = "chia_gaming_wasm"
crate-type = ["cdylib"]
path = "src/mod.rs"

[dependencies]
chia_gaming = { path= "..", features = [] }
clvmr = { version = "=0.12.0", features = ["pre-eval"] }
indexmap = "=1.6.2"
serde = "1.0.203"
serde_json = "1.0"
serde-wasm-bindgen = "0.3.0"
hex = "0.4.3"
rand = "0.8.5"
rand_chacha = "0.3.1"
wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"] }
wasm-bindgen-test = "0.3.25"
js-sys = "0.3.77"
num-bigint = "0.4.0"
num-traits = "0.2.15"
log = "0.4.22"
lol_alloc = "0.4.1"
tracing-core = "0.1.34"
tracing-subscriber = { version = "0.3", features = ["alloc"] }
wasm-logger = "0.2.0"
