[package]
name = "chia_gaming_wasm"
version = "0.1.0"
edition = "2018"
authors = ["Art Yerkes <art.yerkes@gmail.com>"]
description = "tools for working with chialisp language; compiler, repl, python and wasm bindings"
homepage = "https://chialisp.com/"
readme = "README.md"
repository = "https://github.com/Chia-Network/chialisp"
keywords = ["chia", "chialisp", "clvm"]
categories = ["command-line-utilities"]

[lib]
name = "chia_gaming_wasm"
crate-type = ["cdylib"]
path = "src/mod.rs"

[dependencies]
chia_gaming = { path= "..", features = [] }
clvmr = { version = "=0.16.2", features = ["pre-eval"] }
hex = "=0.4.3"
lol_alloc = "=0.4.1"
rand = "=0.8.5"
rand_chacha = "=0.3.1"
bson = "=2.14.0"
serde = "=1.0.228"
serde_json = "=1.0.145"
serde-wasm-bindgen = "=0.6.5"
bech32 = "=0.11.0"
chia-protocol = { version = "=0.35.0", default-features = false }
chia-puzzles = "=0.20.2"
chia-traits = "=0.35.0"
flate2 = { version = "=1.1.1", default-features = false, features = ["zlib-rs"] }
getrandom = { version = "=0.3.4", features = ["wasm_js"] }
wasm-bindgen = { version = "=0.2.104", features = ["serde-serialize"] }
